--- a/menu.html
+++ b/menu.html
@@ -188,7 +188,7 @@
     </div>
 
     <div class="food-items">
-      <img src="./soups/chicken lemon coriander soup.jpg">
+      <img src="./soups/chicken lemon.jpg">
       <div class="details">
         <div class="details-sub">
           <div class="name">
